# ChangeLog for sys-fs/aufs-utils
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Dec 2007; Jakub Moc <jakub@gentoo.org>
  aufs-utils-0.1_pre20071203.ebuild:
  Use bash substitution instead of sed; fix cvs eclass usage

  08 Dec 2007; Russell Harmon (eatnumber1) <eatnumber1@gmail.com>
  +aufs-utils-0.1_pre20071203.ebuild:
  Updated AUFS ebuild to 20071203.
  Changed ebuild to pull static date from AUFS CVS repository,
  since there is no publicly available tarballs.

  19 Oct 2007; Markus Ullmann <jokey@gentoo.org>
  -aufs-utils-0.1_pre20070903.ebuild, -aufs-utils-0.1_pre20070910.ebuild:
  Drop old

  19 Sep 2007; Russell Harmon (eatnumber1) <eatnumber1@gmail.com>
  +aufs-utils-0.1_pre20070910.ebuild, +aufs-utils-0.1_pre20070917.ebuild:
  Version bump

  04 Sep 2007; Jakub Moc <jakub@gentoo.org>
  -aufs-utils-0.1_pre20070812.ebuild:
  Nuke old

  04 Sep 2007; Russell Harmon (eatnumber1) <eatnumber1@gmail.com>
  +aufs-utils-0.1_pre20070903.ebuild:
  Update to the 2007-09-03 release

  20 Aug 2007; Russell Harmon (eatnumber1) <eatnumber1@gmail.com>
  +metadata.xml, +aufs-utils-0.1_pre20070812.ebuild,
  +aufs-utils-9999.ebuild:
  New Ebuild for bug 189573
