@@ -1,6 +1,7 @@
 DIST aufs-utils-0.1_pre20070917.tar.gz 6759 RMD160 ed22957ead4af90a88d648d7329fe22c32465819 SHA1 6fab689e9d59944336dbcf7532eda5e7887bc454 SHA256 bb3d22bfd0ed8a3558b4aa82e0c8e288fc0f57bba2a9d4cb52b4b09bfc57e49a
 EBUILD aufs-utils-0.1_pre20070917.ebuild 588 RMD160 fff771d7d884ead31ffad1dc9fb7b9ad72f21677 SHA1 cb251582d0171cdd8e3a7708e21294e50c4b3ea4 SHA256 7832a100f09891805709ae484a2293074d642f7ff94b58a022c334e188f10583
 EBUILD aufs-utils-0.1_pre20071203.ebuild 706 RMD160 274659f50e6008008ef84e60f66e11d1493f31f5 SHA1 7f6e0efd45c2d64f8ddc00d414b9f3751dc37467 SHA256 08db19157e5862ea1d6549a1bc28441882679064bac5f01152bb4eb62e2fc9b6
+EBUILD aufs-utils-0.1_pre20071210.ebuild 706 RMD160 274659f50e6008008ef84e60f66e11d1493f31f5 SHA1 7f6e0efd45c2d64f8ddc00d414b9f3751dc37467 SHA256 08db19157e5862ea1d6549a1bc28441882679064bac5f01152bb4eb62e2fc9b6
 EBUILD aufs-utils-9999.ebuild 598 RMD160 1d6ac3cb536262c9094e6a829ebafcf192b84c46 SHA1 0b2cc14bccaa5180018c3b3889b1322060177c1e SHA256 ceb8b308f6da0862b24fbd7afed58ba70d9ef9bcdf3de72591a9a67763e48d3f
-MISC ChangeLog 1213 RMD160 f62d973cb4e4fb45d0d7532f75163007c6273468 SHA1 d4fc815eb0e51d6c13289186891196433f3cac85 SHA256 9fbd2822013d7b3854ab1eaa852c5aa2a539a1cc9941c51a5f7ee86f5a5120cb
+MISC ChangeLog 1353 RMD160 0110a3069451214a5567855c3b0cb9a5e5523826 SHA1 7d624f73b8c05ed9adf7f8de4b8f344690f0a6ec SHA256 894695c632f3042033668a57cac7dbd96fc10bc8ac512d0db680d556429b4617
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
